[tool.poetry]
name = "z15_configurator"
version = "0.1.0"
description = "Configuration tool for z15 camcorders"
authors = ["Juan Biondi <juanernestobiondi@gmail.com>"]
packages = [
  {include = "main.py"}
]

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^3.4.1"
numpy = "^1.23.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
